apply fetch type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #display sql logs for debugging
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 
 #update	Adds/updates tables & columns without deleting existing data (most common for development)
